# agent

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml  README.md
backend/crates/: README.md
backend/crates/adapter/: Cargo.toml  README.md
backend/crates/adapter/src/: README.md  app_tool_backend.rs  lib.rs  provider_adapter.rs
backend/crates/adapter/src/gemini/: README.md  adapter.rs  auth_check.rs  detect.rs  errors.rs  invoke_stream.rs  mod.rs  model_inference.rs  parse_events.rs  run_process_registry.rs  types.rs  workspace.rs
backend/crates/agent_core/: Cargo.toml  README.md
backend/crates/agent_core/src/: lib.rs
backend/crates/agent_core/src/context/: mod.rs
backend/crates/agent_core/src/debug/: README.md  formatting.rs  mod.rs  run_trace.rs  tool_console.rs
backend/crates/agent_core/src/models/: blocks.rs  channels.rs  delegation.rs  mailbox.rs  mod.rs  run.rs  side_effect.rs  tool.rs
backend/crates/agent_core/src/orchestration/: mod.rs
backend/crates/agent_core/src/policy/: mod.rs
backend/crates/agent_core/src/ports/: artifact_repository.rs  channel.rs  delegation_repository.rs  inbox_repository.rs  mod.rs  model_inference.rs  outbox_repository.rs  tool_execution.rs  trace_store.rs
backend/crates/agent_core/src/runtime/: README.md  engine.rs  memory_trace_store.rs  mock_inference.rs  mod.rs  run_loop.rs
backend/crates/agent_core/src/runtime/concurrency/: README.md  mod.rs  side_effect_guard.rs  thread_lock.rs
backend/crates/agent_core/src/runtime/context/: README.md  mod.rs  run_context.rs
backend/crates/agent_core/src/runtime/events/: README.md  event_writer.rs  (+1 more)
backend/crates/agent_core/src/tools/: app_dispatch.rs  mod.rs  toolbox.rs
backend/crates/agent_desktop/: Cargo.toml  README.md
backend/crates/agent_desktop/src/: lib.rs  runtime_service.rs
backend/crates/agent_persistence/: Cargo.toml
backend/crates/agent_persistence/src/: comms_delivery.rs  comms_tool.rs  error.rs  lib.rs  org_tool.rs  sqlite.rs  state.rs
backend/crates/agent_server/: Cargo.toml  README.md
backend/crates/agent_server/src/: lib.rs  runtime_service.rs
backend/crates/app_domains/: README.md
backend/crates/app_domains/comms/: Cargo.toml  README.md
backend/crates/app_domains/comms/src/: delivery_policy.rs  lib.rs  models.rs  ports.rs  service.rs
backend/crates/app_domains/core/: Cargo.toml
backend/crates/app_domains/core/src/: errors.rs  ids.rs  lib.rs
backend/crates/app_domains/org/: Cargo.toml  README.md
backend/crates/app_domains/org/src/: lib.rs  models.rs  ports.rs  service.rs  tool_orchestration.rs
backend/crates/app_persistence/: Cargo.toml
backend/crates/app_persistence/src/: comms_delivery.rs  comms_tool.rs  domain_ports.rs  health.rs  lib.rs  org_tool.rs  sqlite.rs  state.rs  workspace.rs
backend/targets/: README.md
backend/targets/server/: Cargo.toml  README.md
backend/targets/server/src/: main.rs
backend/targets/tauri-desktop/: README.md  package.json
backend/targets/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
backend/targets/tauri-desktop/src-tauri/src/: main.rs
(+382 files in other folders)
