[workspace]
resolver = "2"
members = [
  "crates/app_domains/core",
  "crates/app_domains/org",
  "crates/app_domains/comms",
  "crates/app_persistence",
  "crates/agent_core",
  "crates/adapter",
  "crates/agent_desktop",
  "crates/agent_server",
  "targets/server",
  "targets/tauri-desktop/src-tauri"
]
