[package]
name = "app_persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
app_domains_core = { path = "../app_domains/core" }
app_domain_org = { path = "../app_domains/org" }
app_domain_comms = { path = "../app_domains/comms" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
