[package]
name = "server_target"
version = "0.1.0"
edition = "2021"

[dependencies]
adapter = { path = "../../crates/adapter" }
app_persistence = { path = "../../crates/app_persistence" }
agent_core = { path = "../../crates/agent_core" }
agent_server = { path = "../../crates/agent_server" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
