[package]
name = "tauri_desktop_target"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
adapter = { path = "../../../crates/adapter" }
agent_desktop = { path = "../../../crates/agent_desktop" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
