[package]
name = "tauri_desktop_target"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
adapter = { path = "../../../crates/adapter" }
agent_desktop = { path = "../../../crates/agent_desktop" }
app_persistence = { path = "../../../crates/app_persistence" }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
